--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ dependencies:
   cloud_firestore: ^5.4.4
   firebase_storage: ^12.3.4
   provider: ^6.1.1
-  
+  image_picker: ^1.1.2
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
